...

/* Action sheet title selecting CGM
   Title text for button to set up a CGM */
"Add CGM" = "Add CGM";

/* The label of the meal button */
"Add Meal" = "Add Meal";

/* Action sheet title selecting Pump
   Title text for button to set up a new pump */
"Add Pump" = "Add Pump";

/* The title of the Amplitude service */
...
/* The title of the basal rate profile screen
   The title text for the basal rate schedule */
"Basal Rates" = "Basal Rates";

/* The label of the bolus entry button
   The notification title for a bolus failure */
"Bolus" = "Bolus";

/* The format string for bolus progress. (1: delivered volume)(2: total volume) */
"Bolused %1$@ of %2$@" = "Bolused %1$@ of %2$@";

/* The format string for bolus in progress showing total volume. (1: total volume) */
"Bolusing %1$@" = "Bolusing %1$@";

/* The title of the cancel action in an action sheet */
"Cancel" = "Cancel";

/* The title of the cell indicating a bolus is being canceled */
"Canceling Bolus" = "Canceling Bolus";

/* Details for missing data error when carb effects are missing */
"Carb effects" = "Carb effects";
...
"Check that your pump is in range" = "Check that your pump is in range";

/* Recovery suggestion when glucose data is missing */
"Check your CGM data source" = "Check your CGM data source";

/* The title text for the looping enabled switch cell */
"Closed Loop" = "Closed Loop";

/* The title of the action used to dismiss an error alert */
"com.loudnate.LoopKit.errorAlertActionTitle" = "OK";

/* The title of the configuration section in settings */
"Configuration" = "Configuration";

/* The error message displayed for configuration errors. (1: configuration error details) */
"Configuration Error: %1$@" = "Configuration Error: %1$@";
...
"Retry" = "Retry";

/* The title of the services section in settings */
"Services" = "Services";

/* The label of the settings button */
"Settings" = "Settings";

/* Loop Completion HUD accessibility hint */
"Shows last loop error" = "Shows last loop error";

/* Format fragment for a start time */
"since %@" = "since %@";
...
