...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ButtonTableViewCell" id="QMd-B1-jne" customClass="ButtonTableViewCell" customModule="Loop" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="427" height="44"/>
            <autoresizingMask key="autoresizingMask"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QMd-B1-jne" id="T9r-tL-wAO">
                <rect key="frame" x="0.0" y="0.0" width="427" height="43"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oI5-48-SHZ">
                        <rect key="frame" x="182" y="8" width="64" height="27"/>
                        <constraints>
                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="64" id="hrG-HQ-FHS"/>
                        </constraints>
                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                        <state key="normal" title="Save"/>
                    </button>
                </subviews>
                <constraints>
                    <constraint firstItem="oI5-48-SHZ" firstAttribute="top" secondItem="T9r-tL-wAO" secondAttribute="topMargin" id="e9B-aS-GLr"/>
                    <constraint firstAttribute="bottomMargin" secondItem="oI5-48-SHZ" secondAttribute="bottom" id="use-HC-B9I"/>
                    <constraint firstItem="oI5-48-SHZ" firstAttribute="centerX" secondItem="T9r-tL-wAO" secondAttribute="centerX" id="wJE-dT-XeI"/>
...
